ClientFiles/css/IDEOnline.css
/*Bit of info I always forget:
    margin -space outside the box
    padding - space inside the box
    order is clockwise -top, right, bot, left
*/
#wrapper {
    padding: 100px;
	width: 80%;
	margin: auto;
}

.tabs {
    height: 45px;
    width:93%;
    padding: 0 0 0 0;
}

.tab {
    width: 130px;
    height: 45px;
    text-align: center;
    overflow: hidden;
    float: left;
    margin: 0 -15px 0 0;
}


.inner-tab {
    height: 47px;
    background: #fff;
    border-radius: 4px;
    border: 1px solid;
    overflow: hidden;
    margin: 0 10px 0 10px;
}

.tab.activeTab {
    z-index: 2;
    position: relative;
    padding-bottom: 1px;
}

#closeButton {
    color: #808080;
    background: #fff;
    top: 0;
    right: 0;
    border: none;
    float:right;
}
#closeButton:hover {
    color:#ff0000;
}

.inner-tab p {
    float: left;
    width: 79%;
}

.loginBox {
    width: 320px;
    height: 420px;
    background: #000;
    color: #fff;
    top: 35%;
    left: 35%;
    position: absolute;
    padding: 70px 30px 70px 30px;
    box-sizing: border-box; /*when calculating 320 width, include padding and borders*/
    z-index: 2; /*+1 higher than the layer under*/

    display:none;
}

.loginBox h1 {
    margin:0;
    padding-bottom: 20px;
    text-align: center;
    font-size: 22px;
}

.loginBox label {
    font-weight: bold;
}

.loginBox input {
    width: 100%;
    margin-bottom: 20px;
}

.loginBox #userName, #userPasswd {
    border: none;
    border-bottom: 1px solid #fff;
    background: transparent; /*kill color in the edit box, see the background*/
    outline: none; /*An outline is a line that is drawn around elements, outside the borders, to make the element "stand out".*/
    height: 30px;
    color: #fff;
    font-size: 16px;
}

.loginBox #subtmitBtn {
    border: none;
    outline: none;
    height: 40px;
    background: #808080;
    color: #fff;
    font-size: 18px;
    border-radius: 20px;
}

.loginBox #subtmitBtn:hover {
    cursor: pointer;
    background: #ffc107;
    color: #000;
}

.loginBox a {
    text-decoration: none;
    font-size: 16px;
    line-height: 20px;
    color: dimgrey;
}

.loginBox a:hover {
    color: #ffc107;
}

.loginBox .avatar {
    width: 100px;
    height: 100px;
    border-radius: 50%; /*make round corners*/
    position: absolute;
    top: -50px; /*with a height of 100, we move it half way above the container*/
    left: 100px; /*and roughly in the middle of the width of container*/
}

#content {
    position: relative;
    z-index: 1;
}

#inputTextWindow {
    width: 100%;
    min-height: 500px;
    line-height: normal;
    font-size: 18px;
    white-space: pre-wrap; /*white spaces at the end of the div were getting ignored by default, this apparently fixes it*/
    word-wrap: break-word; /*long words now get split at the div border*/
    border: 1px solid;
    padding: 5px 0 20px 10px;
    z-index: 1;
    position: relative;
}

#lineNumbering {
    width:4%;
    top:0;
    left:-4%;
    border: 1px solid;
    margin-top: 5px;
    background-color: white;
    border: none;
    border-color: dimgrey;
    border-right: dotted;
    line-height: normal;
    font-size: 18px;
    text-align: right;
    color: dimgray;
    position: absolute;
}

#solutionWindow {
    width: 15%;
    min-height: 400px;
    top: 50px;
    right: 2px;
    border: 1px solid;
    background-color: white;
    text-align: center;
    font-weight: bold;
    position: absolute;
    z-index: 3; /*higher z-index makes it cover the underlaying element with lower z*/
}

#output {
	clear: both;
	width: 90%;
	height: 20%;
	padding-bottom: 50px;
	padding-top: 50px;
}

#footer {
	clear: both;
	height: 30px;
	background-color: #000;
	color: #fff;
	text-align: center;
	padding-top: 10px;
}




@media only screen and (max-width: 300px) {
  .text {
	  font-size: 11px
	  }
}

